# betmapeas

./: .env.example  .gitignore  CHANGELOG.md  README.md  TODO.md  betmapeas_database_schema.sql  checklist_eas.txt  docker-compose.yml  exemplo_aposta_preenchida.sql  main.py  nginx.conf  pyproject.toml  taskmaster.md
.cursor/rules/: project-rules.mdc
.roo/rules/: project-rules.md
backend/: Dockerfile  add_admin_user.sql  alembic.ini  check_password.py  clear_database.sql  db.py  documentacao_modelagem_completa.md  init_database.sql  main.py  pyproject.toml  script_db.sql  seed_database.py  setup.py  update_admin_password.py
backend/app/core/: config.py  security.py
backend/app/db/: database.py
backend/app/db/migrations/: env.py
backend/app/db/migrations/versions/: c4eb61c7d21a_create_users_table.py  fac3a9d3c7f5_regenerate_auth_flow_fields_migration_.py
backend/app/dependencies/: auth.py
backend/app/models/: user.py
backend/app/routers/: auth.py  users.py
backend/app/schemas/: token.py  user.py
backend/app/utils/: email.py  jwt_utils.py
backend/migrations/versions/: 2024_04_02_000000_create_user_tables.sql  2024_04_02_000000_drop_user_tables.sql
docs/: CLAUDE.md  README-task-master.md  auth_flow_prd.md  betmapeas_mer.mermaid
frontend/: Dockerfile  README.md  index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: EmailVerification.tsx  EnhancedAuthModal.tsx  FixedAuthModal.tsx  ForgotPasswordDialog.tsx  LoginDialog.tsx  RegisterDialog.tsx  (+5 more)
scripts/: PRD copy.txt  task-complexity-report.json
(+5 files in other folders)
